# kmid3

./: .gitignore  CMakeLists.txt  ChangeLog  Messages.sh  README  README.md  ROADMAP.md  TODO  configure.sh  install_manifest.txt  kmid.spec
alsa/: CMakeLists.txt  alsabackend.cpp  alsabackend.h  alsamidiobject.cpp  alsamidiobject.h  alsamidioutput.cpp  alsamidioutput.h  externalsoftsynth.cpp  externalsoftsynth.h  kmid_alsa.desktop  kmid_alsa.json  player.cpp  player.h  prefs_progs.ui  song.cpp  song.h
cmake/: FindMSGFMT.cmake  FindPCHSupport.cmake
doc/: CMakeLists.txt
doc/en/: CMakeLists.txt  index.docbook
doc/es/: CMakeLists.txt  index.docbook
doc/pt_BR/: CMakeLists.txt  index.docbook
doc/sv/: CMakeLists.txt  index.docbook
doc/uk/: CMakeLists.txt  index.docbook
drumstick/: CMakeLists.txt  README
dummy/: CMakeLists.txt  dummybackend.cpp  dummybackend.h  dummymidiobject.cpp  dummymidiobject.h  dummymidioutput.cpp  dummymidioutput.h  kmid_dummy.desktop
examples/: CMakeLists.txt  README  haendel_hallelujah.mid  haendel_hallelujah.rg  lindaamiga.mid  lindaamiga.rg  mozart_aveverum.mid  mozart_aveverum.rg  mozart_diesirae.mid  mozart_diesirae.rg  mozart_konigdernacht.mid  mozart_konigdernacht.rg  schubert_avemaria.mid  schubert_avemaria.rg
examples/kmidtest/: CMakeLists.txt  README  kmidtest.cpp  kmidtest.desktop  kmidtest.h  kmidtest.py  kmidtestui.rc
icons/: CMakeLists.txt  hisc-app-kmid.svgz
mac/: CMakeLists.txt  dlssoftsynth.cpp  dlssoftsynth.h  kmid_mac.desktop  macmidiobject.cpp  macmidiobject.h  macmidioutput.cpp  macmidioutput.h  macosxbackend.cpp  macosxbackend.h  prefs_synth.ui
maps/: CMakeLists.txt  YamahaPSR500.map  YamahaPSS790.map  YamahaQY10.map  gm.map
po/: CMakeLists.txt  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  gl.po  nb.po  nl.po  pt.po  pt_BR.po  sr.po  sr@ijekavian.po  sr@ijekavianlatin.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: CMakeLists.txt  channels.cpp  channels.h  config.cmake  instrumentset.cpp  instrumentset.h  kmid.desktop  kmid2.cpp  kmid2.h  kmid_part.cpp  kmid_part.desktop  kmid_part.h  kmid_part.json  kmid_part.rc  kmid_partview.cpp  kmid_partview.h  kmidui.rc  main.cpp  org.kde.KMid.xml  org.kde.KMidPart.xml  pianola.cpp  pianola.h  playlistdialog.cpp  playlistdialog.h  prefs_lyrics.ui  prefs_midi.ui  qt_kde.h
widgets/: keyboardmap.h  keylabel.cpp  keylabel.h  pianodefs.h  pianokey.cpp  pianokey.h  pianokeybd.cpp  pianokeybd.h  pianokeybd.qrc  pianoscene.cpp  pianoscene.h  rhythmview.cpp  rhythmview.h  timelabel.cpp  timelabel.h  vumeter.cpp  vumeter.h
win/: CMakeLists.txt  kmid_win.desktop  song.cpp  song.h  winbackend.cpp  winbackend.h  winmidiobject.cpp  winmidiobject.h  winmidioutput.cpp  winmidioutput.h
